[modify] ui like whatsapp style

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         </activity>
         <activity android:name="com.chat.joycom.ui.login.LoginActivity" />
         <activity android:name="com.chat.joycom.ui.chat.ChatActivity" />
+        <activity android:name="com.chat.joycom.ui.setting.SettingActivity" />
     </application>
 
 </manifest>
