[add] userInfo act ui, aboutMe act ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name="com.chat.joycom.ui.setting.SettingActivity" />
         <activity android:name="com.chat.joycom.ui.setting.user.UserInfoActivity" />
         <activity android:name="com.chat.joycom.ui.setting.qrcode.QRCodeActivity" />
+        <activity android:name="com.chat.joycom.ui.setting.user.about.AboutMeActivity" />
     </application>
 
 </manifest>
