--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
         <activity android:name="com.chat.joycom.ui.setting.account.SafetyNotifyActivity" />
         <activity android:name="com.chat.joycom.ui.setting.account.email.EmailActivity" />
         <activity android:name="com.chat.joycom.ui.setting.account.TwoStepVerifyActivity" />
+        <activity android:name="com.chat.joycom.ui.setting.account.ModifyPhoneNumActivity" />
         <activity android:name="com.chat.joycom.ui.setting.invite.InviteFriendsActivity" />
     </application>
 
