Enter phone numbers page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
         <activity android:name="com.chat.joycom.ui.setting.account.SafetyNotifyActivity" />
         <activity android:name="com.chat.joycom.ui.setting.account.email.EmailActivity" />
         <activity android:name="com.chat.joycom.ui.setting.account.TwoStepVerifyActivity" />
-        <activity android:name="com.chat.joycom.ui.setting.account.ModifyPhoneNumActivity" />
+        <activity android:name="com.chat.joycom.ui.setting.account.modifyphone.ModifyPhoneNumActivity" />
+        <activity android:name="com.chat.joycom.ui.setting.account.modifyphone.EnterPhoneNumActivity" />
         <activity android:name="com.chat.joycom.ui.setting.invite.InviteFriendsActivity" />
     </application>
 
